# cuda

./: .clang-format  .gitignore  CMakeLists.txt  README.md  build.sh  common.h  setup.py
common/: utils.py
day001/: CMakeLists.txt  README.md  vector_addition.cu
day002/: README.md
day003/: README.md
day004/: README.md
day005/: CMakeLists.txt  README.md  test_relu.py
day006/: README.md
day007/: README.md
day008/: README.md
day009/: README.md
day010/: README.md
day011/: README.md
day012/: README.md  tiled_matmul.cu
day013/: README.md  softmax.cu
day014/: README.md  quantize_vector.cu
day015/: README.md  tensor_cores.cu
day016/: README.md  layer_norm.cu
day017/: README.md
day018/: README.md
day019/: README.md  partial_sum_opt.cu
day020/: README.md  tiled_mm_thread_granularity.cu
day021/: Makefile  README.md  kernel_launcher.h  main.cpp  reduce0.cu  reduce1.cu  reduce2.cu  reduce3.cu  reduce4.cu  reduce5.cu
day022/: README.md
day023/: Makefile  README.md  conv1d.cu
day024/: README.md  tiled_conv1d.cu
day025/: README.md  conv2d.cu
day026/: README.md  benchmark.py  setup.py  tanh.cu  tanh_custom.py  test.py
day027/: README.md  benchmark.py  cross_entropy.cu  cross_entropy_custom.py  setup.py  test.py
day028/: README.md  scan.cu
day029/: README.md
day030/: README.md  scan.cu
day031/: README.md  rnn.cu
day032/: README.md  add_triton.py  benchmark.py
day033/: README.md  benchmark.py  matmul_1d_grid.py  matmul_2d_grid.py  matmul_cpu.py
day034/: README.md  block_matmul.py  block_matmul_cpu.py
day035/: README.md  benchmark.py  block_matmul_2d_grid.py
day036/: README.md  block_matmul_1d_grid.py
